# swoq-bot

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  README.md  stress-test.sh
src/: CMakeLists.txt  Commands.h  Dijkstra.h  Dotenv.cpp  Dotenv.hpp  DungeonMap.cpp  DungeonMap.h  Formatters.h  Game.cpp  Game.h  GameCallbacks.h  LoggingAndDebugging.h  Main.cpp  Map.cpp  Map.h  Offset.h  Player.cpp  Player.h  PlayerMap.cpp  PlayerMap.h  Swoq.cpp  Swoq.hpp  Swoq.proto  ThreadSafe.h  TileProperties.h  TypeTraits.h  Vector2d.cpp  Vector2d.h  dotenv.cpp  dotenv.hpp  main.cpp  swoq.cpp  swoq.hpp  swoq.proto
tests/: CMakeLists.txt  DijkstraTests.cpp  OffsetTests.cpp  ReversedPathTests.cpp  ThreadSafeTests.cpp  TypeTraitsTests.cpp  Vector2dTests.cpp  dummy_test.cpp
